Reduce amount of libraries in the classpath
Helps to make IDEs checkout the project faster.
May wanna strip it even further in the future.